--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -71,4 +71,5 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .row {
   overflow: hidden;
   margin: 0 0 20px;
+  text-align: left;
 }
